--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               </div>
             </div>
             <div class="card-body p-3 pb-0">
-              <ul class="list-group">
+              <ul id="lista" class="list-group">
                 <!-- template_forecast -->
               </ul>
             </div>
