--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <select id="dropdownMenuButton" class="btn bg-gradient-primary dropdown-toggl" name="select">
                   <option value="" selected disabled hidden>Seleccione una ciudad</option>
                   <option class="dropdown-item" value="guayaquil">Guayaquil</option>
+                  <option class="dropdown-item" value="ambato">Ambato</option>
+                  <option class="dropdown-item" value="tena">Tena</option>
                   
                 </select>
               </div>
